--- a/index.html
+++ b/index.html
@@ -2,14 +2,87 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-tflite@0.0.1-alpha.6/dist/tf-tflite.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
+
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+
+    <style>
+        #canvas{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            pointer-events: none;
+        }
+
+        #canvas > svg{
+            width: 100%;
+            height: 100%;
+        }
+
+        #container{
+            display: inline-block;
+            position: relative;
+        }
+    </style>
 </head>
 <body>
-<h1>hello </h1>
+<h1>TFLite Label Assist </h1>
 
-<img id="img" src="goal_test.png"/>
+<div id="app">{{ message }}</div>
+
+<div id="container">
+    <!-- <img id="img" src="goal_test.png"/> -->
+    <video id="video" controls src="test_video.mp4"></video>
+    <div id="canvas"></div>
+</div>
+
+<button onclick="draw.clear()">Clear</button>
+
+<div>
+    <p>Confidence</p>
+    <input id="confidence" type="range" min="0" max="1" value=".5" step="0.05" >
+</div>
 
 </body>
 <script>
+
+const { createApp, ref } = Vue
+
+const app = createApp({
+  setup() {
+
+    const message = ref('Hello vue!')
+
+
+    return {
+      message
+    }
+  }
+}).mount('#app')
+
+
+
+
+const confidence = document.getElementById('confidence')
+const video = document.getElementById('video')
+
+// video.addEventListener("timeupdate", (event) => {
+//   console.log(video.currentTime);
+//   run()
+// });
+
+let prev_time = null
+
+window.setInterval(()=>{
+    if (prev_time != video.currentTime)
+        run()
+    prev_time = video.currentTime
+}, 1000/30)
+
 
 async function run(){
 // Load the MobilenetV2 tflite model from tfhub.
@@ -17,13 +90,13 @@ const tfliteModel = await tflite.loadTFLiteModel('model_docks_v2_back.tflite');
 
 const outputTensor = tf.tidy(() => {
     // Get pixels data from an image.
-    const img = tf.browser.fromPixels(document.getElementById('img'));
+    const img = tf.browser.fromPixels(video);
     // Normalize (might also do resize here if necessary).
     const resized = tf.image.resizeBilinear(img, [192, 192]);
 
     const input = tf.cast(tf.expandDims(resized), 'int32');
 
-    console.log('input', input.dataSync())
+    // console.log('input', input.dataSync())
     // const input = tf.sub(tf.div(tf.expandDims(img), 127.5), 1);
     // Run the inference.
     let outputTensor = tfliteModel.predict(input);
@@ -32,19 +105,58 @@ const outputTensor = tf.tidy(() => {
     return outputTensor
   });
 
-    // bboxes   
-  console.log(outputTensor['TFLite_Detection_PostProcess'].dataSync())
+ 
+  
+  const bboxes = outputTensor['TFLite_Detection_PostProcess'].dataSync()
+  const confidences = outputTensor['TFLite_Detection_PostProcess:2'].dataSync()
 
-    // classes   
-  console.log(outputTensor['TFLite_Detection_PostProcess:1'].dataSync())
+  render_bboxes(bboxes, confidences)
 
-    // confidences   
-  console.log(outputTensor['TFLite_Detection_PostProcess:2'].dataSync())
-  console.log(outputTensor['TFLite_Detection_PostProcess:3'].dataSync())
 
-// console.log(outputTensor)
+// classes   
+//   console.log(outputTensor['TFLite_Detection_PostProcess:1'].dataSync())
+//   console.log(outputTensor['TFLite_Detection_PostProcess:3'].dataSync())
+
 }
 
-run()
+
+function render_bboxes(bboxes, confidences){
+
+
+    for (let i = 0; i < confidences.length; i++) {
+        const conf = confidences[i]
+        const bbox = bboxes.slice(i*4,(i*4)+4)
+        if (conf >= confidence.value )
+        draw_bbox(bbox, conf)
+    }
+
+}
+
+// run()
+
+const canvas =  document.getElementById('canvas')
+// const [canvas_height, canvas_width] = [300, 300]
+const draw = SVG().addTo('#canvas')
+
+function draw_bbox(bbox, opacity){
+
+    const canvas_height = canvas.clientHeight
+    const canvas_width = canvas.clientWidth
+
+    console.log(canvas_height, canvas_width)
+
+
+    const [y1, x1, y2, x2] = bbox;
+
+    const bbox_x = x1 * canvas_width
+    const bbox_y = y1 * canvas_height
+    const bbox_width = (x2 - x1) * canvas_width
+    const bbox_height = (y2 - y1) * canvas_height
+
+    var rect = draw.rect(bbox_width, bbox_height).move(bbox_x, bbox_y).fill('none').stroke({ color: '#f06', opacity: opacity, width: 5 })
+    var text = draw.text(String(opacity.toFixed(2))).font({size:16}).move(bbox_x, bbox_y).fill('#ffffff')
+}
+
+
 
 </script>
