--- a/index.html
+++ b/index.html
@@ -31,21 +31,27 @@
 </head>
 
 <body>
-    <h1>TFLite Label Assist </h1>
+    <div id="app">
 
-    <div id="app">{{ message }}</div>
+        <h1>TFLite Label Assist - {{ message }}</h1>
 
-    <div id="container">
-        <!-- <img id="img" src="goal_test.png"/> -->
-        <video id="video" controls src="test_video.mp4"></video>
-        <div id="canvas"></div>
-    </div>
+        <div id="container">
+            <!-- <img id="img" src="goal_test.png"/> -->
+            <video id="video" controls src="test_video.mp4"></video>
+            <div id="canvas"></div>
+        </div>
 
-    <button onclick="draw.clear()">Clear</button>
+        <button onclick="draw.clear()">Clear</button>
 
-    <div>
-        <p>Confidence</p>
-        <input id="confidence" type="range" min="0" max="1" value=".5" step="0.05">
+        <div>
+            <p>Confidence - {{confidence}}</p>
+            <input id="confidence" type="range" min="0" max="1" value=".5" step="0.05" v-model.number="confidence">
+
+            <p>Prediction per second - {{predictPerSecond}}</p>
+            <input id="frame" type="number" v-model.number="predictPerSecond">
+
+        </div>
+
     </div>
 
 </body>
@@ -68,18 +74,30 @@
         setup() {
 
             const message = ref('Hello vue!')
-
+            const predictPerSecond = ref(1)
+            const confidence = ref(0.5)
 
             return {
-                message
+                message,
+                confidence,
+                predictPerSecond
             }
+
+        },
+        mounted() {
+            console.log('Mounted app')
         }
     }).mount('#app')
 
+    function getConfidenceValue() {
+        return app.confidence
+    }
 
 
+    function load_video() {
 
-    const confidence = document.getElementById('confidence')
+    }
+
     const video = document.getElementById('video')
 
     // video.addEventListener("timeupdate", (event) => {
@@ -138,7 +156,7 @@
         for (let i = 0; i < confidences.length; i++) {
             const conf = confidences[i]
             const bbox = bboxes.slice(i * 4, (i * 4) + 4)
-            if (conf >= confidence.value)
+            if (conf >= getConfidenceValue())
                 draw_bbox(bbox, conf)
         }
 
